changed game view logic and started snl view