@@ -2,6 +2,7 @@ package ntnu.idi.idatt.games.snakesandladders;
 
 import java.util.List;
 import ntnu.idi.idatt.models.Board;
+import ntnu.idi.idatt.models.Dice;
 import ntnu.idi.idatt.models.GameEngine;
 import ntnu.idi.idatt.models.Piece;
 import ntnu.idi.idatt.models.Player;
@@ -11,8 +12,20 @@ import ntnu.idi.idatt.models.Player;
  */
 public class SnakesAndLaddersEngine extends GameEngine {
 
-  public SnakesAndLaddersEngine(List<Player> players, Board board, int currentPlayerIndex) {
+  private final Dice dice;
+
+  public SnakesAndLaddersEngine(List<Player> players, Board board, int currentPlayerIndex,
+      Dice dice) {
     super(players, board, currentPlayerIndex);
+
+    this.dice = dice;
+  }
+
+  public void initPieces() {
+    for (Player p : players) {
+      p.getPieces().clear();
+      p.getPieces().add(new Piece(board.getTile(1), p, new LinearMovementStrategy()));
+    }
   }
 
   @Override
@@ -26,9 +39,10 @@ public class SnakesAndLaddersEngine extends GameEngine {
   @Override
   public void handleTurn() {
     Player player = getCurrentPlayer();
-    Piece piece = player.getPieces().get(0); // Only one piece in SnL
+    Piece piece = player.getPieces().getFirst();
 
-    int steps = rollDice();
+    dice.roll();
+    int steps = dice.getValue();
     System.out.println(player.getName() + " rolled " + steps);
 
     piece.move(steps, board);
@@ -50,9 +64,5 @@ public class SnakesAndLaddersEngine extends GameEngine {
       }
     }
     return null;
-  }
-
-  private int rollDice() {
-    return (int) (Math.random() * 6) + 1;
   }
 }
